--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
 <script src="./finalValu.js"></script>
 <script src='./classElement.js'></script>
+<script src='./closure.js'></script>
 </body>
 </html>
