usage for loop and conditional

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <script src="./finalValu.js"></script>
 <script src='./classElement.js'></script>
 <script src='./closure.js'></script>
+<script src='./fizzBuzz.js'></script>
 </body>
 </html>
