--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-<script src="./finalValu.js"></script>
-<script src='./classElement.js'></script>
-<script src='./closure.js'></script>
-<script src='./fizzBuzz.js'></script>
+<script src='./mapGetSet.js'></script>
+
 </body>
 </html>
