find longest word length

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-<script src='./mapGetSet.js'></script>
+<script src='./longestWord.js'></script>
 
 </body>
 </html>
