--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-<script src='filterReduce.js'></script>
+<script src='./javascript/basicJavascript/prompt.js'></script>
 
 </body>
 </html>
