--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-<script src='./algorithms/sum.js'></script>
+<script src='./algorithms/fibonacci.js'></script>
 
 </body>
 </html>
