--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-<script src='./algorithms/fibonacci.js'></script>
-
+  <script src="/algorithms/getMin.js"></script>
 </body>
 </html>
