check if number is even or not

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="/algorithms/getMin.js"></script>
+  <script src="/algorithms/isEven.js"></script>
 </body>
 </html>
