sum numbers and time complexity

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="/algorithms/factorial.js"></script>
+  <script src="/algorithms/app.js"></script>
 </body>
 </html>
